refactor(backend): dead methods, role gates, one trimToNull, stricter MapStruct
Improvement audit 2026-09, backend simplification slice 1.

- BE-SIMP-06: delete four zero-caller methods (DefaultBlueprintKeyService
  .defaultProductKeys, ScopePredicate.memberOrgUnitIdsEmpty,
  TermsAcceptanceService.findAcceptanceHistory,
  IngestGatewayProperties.serviceAccountUsernames). clampOffersToStock and
  the two spec Code: lines were already gone on main.
- BE-SIMP-07: Hangar, Operation, Squadron and SpecialCommand controllers ask
  AuthHelperService (isAdmin / new isAdminOrOfficer) instead of scanning the
  injected Authentication for "ROLE_ADMIN"; the Authentication parameters
  are gone. A parameterised test per controller runs every caller shape and
  compares against the rule the raw scan encoded.
- BE-SIMP-08: eight hand-written trim-to-null copies delegate to
  StringNormalization.trimToNull.
- BE-MOD-06: getFirst()/getLast() instead of get(0)/get(size - 1); one
  pattern-matching switch for the SSE cause tag shared by both streams; the
  live-sync topic set really keeps its order now.
- BE-MOD-05/05b: CentralMapperConfig injects used mappers through the
  constructor and fails the build on an unmapped target. Every intended gap
  is an explicit ignore; four unused toEntity methods are deleted; the
  refinery order links its mission through the id-stub default again.
  Found a real gap: the job type a mission embeds never carried
  isMissionLead, so the facts-bar "Leiter" fell back to the owner.

Co-Authored-By: Claude Opus 5.5 <noreply@anthropic.com>
Signed-off-by: Lucas Greuloch (greluc) <lucas.greuloch@gmail.com>